fixed offcenter button

--- a/src/components/InstanceList.css
+++ b/src/components/InstanceList.css
@@ -8,8 +8,3 @@
 .instance-list .instance{
   margin: 0 2em 0 0;
 }
-
-.new-instance-button{
-  height: 3em;
-  margin-left: 1em;
-}
